--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,14 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+consultorio-online-ui/bower_components/qunit/src/test.js
+
+### Bower ###
+bower_components
+node_modules
+dist
+.sass-cache
+.bower-cache
+.bower-registry
+.bower-tmp
+
