--- a/consultorio-online-ui/package.json
+++ b/consultorio-online-ui/package.json
@@ -12,11 +12,16 @@
     "grunt-contrib-qunit": "~0.x",
     "grunt-contrib-uglify": "~0.x",
     "grunt-contrib-watch": "~0.x",
-	"grunt-contrib-sass": "~0.x",
-	"grunt-contrib-concat": "~0.x"
+    "grunt-contrib-sass": "~0.x",
+    "grunt-contrib-concat": "~0.x",
+    "grunt-contrib-csslint": "^0.5.0"
   },
   "scripts": {
     "postinstall": "./node_modules/.bin/bower install",
     "test": "grunt test"
+  },
+  "dependencies": {
+    "grunt-contrib-htmlmin": "^0.4.0",
+    "grunt-wiredep": "^2.0.0"
   }
 }
