--- a/consultorio-online-ui/bower.json
+++ b/consultorio-online-ui/bower.json
@@ -5,7 +5,10 @@
     "qunit": "~1.x"
   },
   "dependencies": {
+    "angular": "1.3.15",
+    "angular-bootstrap": "~0.13.4",
+    "bootstrap": "~3.3.5",
     "jquery": "~1.x",
-	"angular": "1.3.15"
+    "jquery-ui": "~1.11.4"
   }
 }
