--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,11 @@
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
-
-# Folder config file
-Desktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-# =========================
-# Operating System Files
-# =========================
-
-# OSX
-# =========================
-
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Thumbnails
-._*
-
-# Files that might appear on external disk
-.Spotlight-V100
-.Trashes
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-consultorio-online-ui/bower_components/qunit/src/test.js
-
-### Bower ###
+/.apt_generated/
+/.settings/
+/WebContent/
+/target/
 bower_components
-node_modules
-dist
 .sass-cache
-.bower-cache
-.bower-registry
-.bower-tmp
+node_modules
 
+.classpath
+.factorypath
+.project
