--- a/consultorio-online-web/src/main/webapp/WEB-INF/web.xml
+++ b/consultorio-online-web/src/main/webapp/WEB-INF/web.xml
@@ -20,11 +20,11 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			/WEB-INF/spring-security.xml
+			/WEB-INF/app-context.xml
 		</param-value>
 	</context-param>
 
-	<!-- Spring Security -->
+
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy
@@ -33,7 +33,7 @@
 
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
-		<url-pattern>/*</url-pattern>
+		<url-pattern>/api/*</url-pattern>
 	</filter-mapping>
 
 	<listener>
@@ -43,6 +43,8 @@
 	<listener>
 		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	</listener>
+
+
 
 	<servlet>
 		<servlet-name>consultorio-dispatcher</servlet-name>
@@ -54,11 +56,22 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
+	<servlet>
+		<servlet-name>CXFServlet</servlet-name>
+		<servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
+		<load-on-startup>2</load-on-startup>
+	</servlet>
+
+
+
 	<servlet-mapping>
 		<servlet-name>consultorio-dispatcher</servlet-name>
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
 
-
+	<servlet-mapping>
+		<servlet-name>CXFServlet</servlet-name>
+		<url-pattern>/rest/*</url-pattern>
+	</servlet-mapping>
 
 </web-app>
