--- a/consultorio-online-core/src/main/resources/application.properties
+++ b/consultorio-online-core/src/main/resources/application.properties
@@ -9,4 +9,4 @@ hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.format_sql=true
 hibernate.hbm2ddl.auto=create-drop
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
-hibernate.show_sql=true
+hibernate.show_sql=false
